# notion-feed.rs

./: Cargo.toml  README.md
.github/workflows/: main.yml  release.yml
src/: config.rs  main.rs
src/feed/: feed_item.rs  feeds.rs  mod.rs  source.rs
src/notion/: client.rs  database.rs  page.rs
